# agentic-career-search

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DAILY_IMPROVEMENTS.md  Makefile  PROMPTS.md  QUICKSTART.md  README.md  SAFETY.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 87de9ef55524_initial_schema.py
docs/: API.md  BADGE_LOG.md  CONFIGURATION.md  DAILY_MAINTAINER_PROMPT.md  DEPLOYMENT.md  PULL_SHARK_LOG.md  TROUBLESHOOTING.md  USE_CASES.md
docs/adr/: ADR-065-async-task-queue.md  ADR-071-structured-logging.md  ADR-075-database-ORM.md  ADR-076-HTTP-client.md  ADR-077-source-adapter-parsing-contract.md  ADR-078-jsonld-jobposting-adapter.md  ADR-079-ashby-source-adapter.md  ADR-080-workable-source-adapter.md  ADR-081-recruitee-source-adapter.md  ADR-082-smartrecruiters-source-adapter.md  ADR-083-teamtailor-source-adapter.md  ADR-084-personio-source-adapter.md  ADR-085-bamboohr-source-adapter.md  ADR-086-jobvite-source-adapter.md  ADR-087-icims-source-adapter.md  ADR-088-workday-source-adapter.md  ADR-089-oracle-taleo-source-adapter.md  ADR-090-successfactors-source-adapter.md  ADR-091-breezyhr-source-adapter.md  (+4 more)
scripts/: daily_review_all_repos.sh  daily_review_and_improve.sh  generate_demo_gif.py  generate_demo_gif.sh  health_check.py  reset_dev_db.sh  run_dev.sh  seed_source_configs.py
tests/: conftest.py
(+75 files in other folders)
