[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-career-search"
version = "0.1.0"
description = "AI-agent orchestration backend for autonomous job discovery workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SolidRusT Networks" }]
dependencies = [
  "alembic>=1.13.2",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "greenlet>=3.1.1",
  "httpx>=0.27.2",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
  "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autoapply_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true
